tests/fail/call_wrong_nbr_args2.dode

fn main() {
    return other(1,2,3,4);
}

fn other(a,b,c) {
    return a+b+c;
}
